<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/background"
    android:padding="16dp">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="44dp"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/gmi"
        tools:layout_editor_absoluteX="16dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_name"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/textInputEditText4"
        app:layout_constraintTop_toTopOf="@+id/textInputEditText4"
        tools:layout_editor_absoluteX="16dp">

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_name2"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/textInputEditText5"
        app:layout_constraintTop_toTopOf="@+id/textInputEditText5"
        tools:layout_editor_absoluteX="54dp">

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/textInputEditText2"
        app:layout_constraintTop_toTopOf="@+id/textInputEditText2"
        tools:layout_editor_absoluteX="16dp">

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@+id/textInputEditText3"
        app:passwordToggleEnabled="true"
        tools:layout_editor_absoluteX="16dp">

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="REGISTER"
        android:textColor="@color/white"
        app:backgroundTint="?android:attr/colorFocusedHighlight"
        android:layout_marginTop="38dp"
        app:layout_constraintTop_toBottomOf="@+id/textInputEditText3"
        tools:layout_editor_absoluteX="16dp"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/scaninstead"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/btn_link_to_login"
        android:textAllCaps="false"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/button_register"
        app:layout_constraintStart_toStartOf="@+id/button_register"
        app:layout_constraintTop_toBottomOf="@+id/button_register" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/textInputEditText4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:hint="@string/hint_name21"
        android:inputType="text"
        android:padding="20dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        tools:layout_editor_absoluteX="16dp" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/textInputEditText5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_name3"
        android:inputType="textPersonName"
        android:padding="20dp"
        android:layout_marginTop="18dp"
        app:layout_constraintTop_toBottomOf="@+id/textInputEditText4"
        tools:layout_editor_absoluteX="16dp" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/textInputEditText3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:padding="20dp"
        android:layout_marginTop="18dp"
        app:layout_constraintTop_toBottomOf="@+id/textInputEditText2"
        tools:layout_editor_absoluteX="16dp" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/textInputEditText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_email"
        android:layout_marginTop="18dp"
        app:layout_constraintTop_toBottomOf="@+id/textInputEditText5"
        android:inputType="textEmailAddress"
        android:padding="20dp"
        tools:layout_editor_absoluteX="16dp" />
</androidx.constraintlayout.widget.ConstraintLayout>